2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile: Make publish and install targets synonyms.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Master.master.cs: Make the login instance, not static.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Fix a few typos.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Clean up after ourselves.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Don't rewrite javascript code.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Fix boolean logic.

2009-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DownloadLatestFile.aspx:
	* DownloadLatestFile.aspx.cs:
	* DownloadLatestFile.aspx.designer.cs: Added. Support for downloading
	the latest file a lane has produced. 

2009-06-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GetRevisionLog.aspx.cs: Use new API to automatically
	decompress logs and diffs upon download.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GetRevisionLog.aspx.designer.cs: Regenerated.

	* GetRevisionLog.aspx.cs: Download logs and diffs from the
	web service.

	* GetRevisionLog.aspx: Split log and diff in two blocks.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GetFile.aspx.cs: Don't use WriteFile, deleting the file
	right after breaks apache.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewWorkTable.aspx.designer.cs: Updated.

	* ViewWorkTable.aspx: Remove Title, the master page sets it.

2009-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewTable2.aspx.cs: Add the work host to the table.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewLaneFileHistory.aspx:
	* ViewLaneFileHistory.aspx.cs: Added.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* doc/Todo.html: Updated.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditHost.aspx: