@@ -1,5 +1,11 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* GetFile.aspx.cs:
+	* ViewHtmlReport.aspx.cs: If an error occurred while downloading
+	something, redirect to the login page.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* Makefile: Make publish and install targets synonyms.
 
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
